@@ -13,6 +13,8 @@ PHP 4                                                                      NEWS
 - Moved extensions to PECL (http://pear.php.net/): (James, Derick)
   . ext/vpopmail
   . ext/cybermut
+- Fixed bug #19566 (get_declared_classes() segfaults). (Moriyoshi, Marcus, Andi)
+- Fixed bug #20381 (array_merge_recursive mangles input arrays). (Moriyoshi) 
 - Added -n command switch to cli and cgi version which allows to skip php.ini
   parsing at startup. (Marcus, Wez)
 - Fixed bug #19689 (absolute paths like /test/dir/ not working correctly).
